fix: remove visibilitychange handler to prevent premature data-theme-ready removal
- index.html: deleted visibilitychange event listener so data-theme-ready is now only removed on hard reload (beforeunload, unload, pagehide)
- App.vue: improved win animation img markup formatting
- RocketWheelLite/theme.scss, RocketWheelPro/theme.scss: adjusted .win-frame left positioning for correct layout

--- a/src/themes/RocketWheelLite/theme.scss
+++ b/src/themes/RocketWheelLite/theme.scss
@@ -181,7 +181,7 @@
 
 .win-frame {
   top: 11.3%;
-  left: 30.9%;
+  left: 32.9%;
   position: absolute;
   z-index: 7;
   width: 35vmin;
